--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <script src="scripts.js">
-    console.log("Hello, World!")
+    console.log(computerPlay())
   </script>
 </body>
 </html>
