--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
 </head>
 <body>
   <script src="scripts.js">
-    console.log(computerPlay())
+    function myFunction() {
+      let text;
+      let person = prompt("Please enter your name:", "Harry Potter");
+      if (person == null || person == "") {
+        text = "User cancelled the prompt.";
+      } else {
+        text = "Hello " + person + "! How are you today?";
+      }
+      document.getElementById("demo").innerHTML = text;
+    }
   </script>
+  <button onclick="myFunction()">Rock, Paper, or Scissors?</button>
+  <p id="demo"></p>
 </body>
 </html>
