Adding button and prompt to enter a choice.

--- a/index.html
+++ b/index.html
@@ -5,19 +5,8 @@
   <meta charset="UTF-8"/>
 </head>
 <body>
-  <script src="scripts.js">
-    function myFunction() {
-      let text;
-      let person = prompt("Please enter your name:", "Harry Potter");
-      if (person == null || person == "") {
-        text = "User cancelled the prompt.";
-      } else {
-        text = "Hello " + person + "! How are you today?";
-      }
-      document.getElementById("demo").innerHTML = text;
-    }
-  </script>
   <button onclick="myFunction()">Rock, Paper, or Scissors?</button>
   <p id="demo"></p>
+  <script src="scripts.js"></script>
 </body>
 </html>
