--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
   <title>Page Title</title>
   <meta charset="UTF-8"/>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <div class="game">
   <button onclick="myFunction()">Rock, Paper, or Scissors?</button>
   <p id="demo"></p>
   <script src="scripts.js"></script>
+  </div>
 </body>
 </html>
