--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div class="game">
-  <button onclick="myFunction()">Rock, Paper, or Scissors?</button>
-  <p id="demo"></p>
   <script src="scripts.js"></script>
+
+  <div class="header">
+    Choose wisely: Rock, Paper, or Scissors?
   </div>
+
+  <div class="game">
+    <button onclick="myFunction()">I'm ready</button>
+    <p id="demo"></p>
+  </div>
+
 </body>
 </html>
